manifests/thermo-automation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thermo-automation
  namespace: thermo-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thermo-automation
  template:
    metadata:
      labels:
        app: thermo-automation
    spec:
      containers:
        - name: thermo-automation
          image: ghcr.io/wuguishifu/thermo-automation:latest
