manifests/thermo-automation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thermo-automation
  namespace: thermo-automation
spec:
  selector:
    app: thermo-automation
  ports:
    - port: 3000
      targetPort: 3000
