manifests/thermo-automation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thermo-automation
  namespace: thermo-automation
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - thermo.wuguishifu.dev
      secretName: thermo-automation-tls
  rules:
    - host: thermo.wuguishifu.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thermo-automation
                port:
                  number: 3000
